--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,6 +7,7 @@ public_folder: "uploads"
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
+    extension: mdx
     folder: "/blog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
