--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,6 +5,8 @@ backend:
 media_folder: "static/uploads" # Media files will be stored in the repo under images/uploads
 public_folder: "uploads"
 publish_mode: editorial_workflow
+nested:
+  depth: 100
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
