--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ publish_mode: editorial_workflow
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "blog" # The path to the folder where the documents are stored
+    folder: "docs" # The path to the folder where the documents are stored
     nested:
       depth: 100
     create: true # Allow users to create new documents in this collection
