--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,3 +14,5 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
     nested:
       depth: 2
+      summary: "{{title}}"
+    meta: { path: { widget: string, label: "Path", index_file: "index" } }
