--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,14 +5,22 @@ backend:
 media_folder: "static/uploads" # Media files will be stored in the repo under images/uploads
 publish_mode: editorial_workflow
 collections:
-  - name: "docs"
-    label: "Documentation"
-    folder: "docs"
+  - name: pages
+    label: Pages
+    label_singular: "Page"
+    folder: docs
     create: true
-    fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Body", name: "body", widget: "markdown" }
+    # adding a nested object will show the collection folder structure
     nested:
-      depth: 2
-      summary: "{{title}}"
+      depth: 100 # max depth to show in the collection tree
+      summary: "{{title}}" # optional summary for a tree node, defaults to the inferred title field
+    fields:
+      - label: Title
+        name: title
+        widget: string
+      - label: Body
+        name: body
+        widget: markdown
+    # adding a meta object with a path property allows editing the path of entries
+    # moving an existing entry will move the entire sub tree of the entry to the new location
     meta: { path: { widget: string, label: "Path", index_file: "index" } }
