--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ collections:
   - name: pages
     label: Pages
     label_singular: "Page"
-    folder: docs
+    folder: test
     create: true
     # adding a nested object will show the collection folder structure
     nested:
